# psi

./: .env.sample  .gitignore  README.md  pyproject.toml
assets/stats/: egodex_stat_all.json  he_raw_rel_stats_combined.json  he_raw_rel_stats_combined_no_static.json
envs/: uv.lock.psi0
scripts/: predownload_qwen3vl.py  save_posttrain_action_expert.py  save_pretrain_qwen3vl_backbone.py  simple_to_real_lerobot.py  train.py
scripts/deepspeed/: zero3.json
scripts/deploy/: serve_psi0_simple.sh
scripts/train/: ddp.launch.yaml  deepspeed.launch.yaml
scripts/train/psi0/: finetune-real-psi0.sh  finetune-simple-psi0-rtc.sh  finetune-simple-psi0.sh  posttrain-he-psi0.sh  posttrain-mix-psi0.sh  pre-train-egodex-fast.sh  pretrain-egodex-psi0-fast.sh  pretrain-he-psi0-fast.sh  pretrain-mix-psi0-fast.sh
src/InternVLA-M1/: pyproject.toml
src/InternVLA-M1/InternVLA/config/deepseeds/: deepspeed_zero2.yaml
src/InternVLA-M1/InternVLA/config/training/: internvla_cotrain_custom.yaml  internvla_cotrain_humanoid.yaml  internvla_cotrain_libero.yaml  internvla_cotrain_oxe.yaml  internvla_cotrain_sim_demo.yaml
src/InternVLA-M1/InternVLA/dataloader/: __init__.py  lerobot_datasets.py  vlm_datasets.py
src/InternVLA-M1/InternVLA/dataloader/gr00t_lerobot/: data_config.py  datasets.py  embodiment_tags.py  mixtures.py  video.py
src/InternVLA-M1/InternVLA/dataloader/gr00t_lerobot/transform/: state_action.py
src/InternVLA-M1/InternVLA/dataloader/qwenvl_llavajson/: qwen_data_config.py
src/InternVLA-M1/InternVLA/model/: tools.py
src/InternVLA-M1/InternVLA/model/framework/: M1.py  __init__.py  base_framework.py  share_tools.py
src/InternVLA-M1/InternVLA/model/modules/action_model/: DiTActionHeader.py
src/InternVLA-M1/InternVLA/model/modules/action_model/DiT_modules/: gaussian_diffusion.py  models.py
src/InternVLA-M1/InternVLA/model/modules/dino_model/: dino.py
src/InternVLA-M1/InternVLA/model/modules/vlm/: QWen2_5.py  __init__.py
src/InternVLA-M1/InternVLA/training/: train_internvla.py  train_internvla_cotrain.py
src/InternVLA-M1/InternVLA/training/trainer_utils/: metrics.py
src/InternVLA-M1/scripts/: train_internvla.sh
src/fast/: README.md
src/fast/egodex-rel-50w-1x48-v2048-s100/: processing_action_tokenizer.py  processor_config.json  tokenizer.json
src/gr00t/: README.md  openloop_eval.py
src/gr00t/gr00t/configs/modality/: new_embodiment_task_description.py
src/gr00t/gr00t/data/: schema.py
src/gr00t/gr00t/data/transform/: state_action.py
src/gr00t/gr00t/model/: policy.py
src/gr00t/gr00t/model/gr00t_n1d6/: gr00t_n1d6.py
src/gr00t/gr00t/policy/: gr00t_policy.py
src/gr00t/scripts/: deploy_gr00t_simple.sh  train_gr00t.sh  train_gr00t_simple.sh
src/lerobot_patch/common/datasets/: lerobot_dataset.py
src/psi/: __init__.py  train.py
src/psi/config/: __init__.py  augmentation.py  config.py  data.py  data_egodex.py  data_he.py  data_lerobot.py  data_mix.py  data_simple.py  dynamic.py  model.py  model_psi0.py  model_qwen3vl.py  tokenizer.py  transform.py
src/psi/config/train/: finetune_real_psi0_config.py  finetune_simple_config.py  finetune_simple_psi0_config.py  posttrain_he_psi0_config.py  posttrain_mix_psi0_config.py  pretrain_egodex_qwen3vl_config.py  pretrain_he_qwen3vl_config.py  pretrain_mix_qwen3vl_config.py
src/psi/data/: __init__.py  dataset.py  sampler.py
src/psi/data/egodex/: egodex_dataset.py
src/psi/data/egodex/utils/: data_utils.py  draw_utils.py  skeleton_tfs.py
src/psi/data/humanoid/: he_raw_dataset.py
src/psi/data/lerobot/: __init__.py  lerobot_ext.py
src/psi/deploy/: helpers.py  psi0_serve_simple.py
src/psi/models/: psi0.py
src/psi/tokenizer/: __init__.py  bin_action_tokenizer.py  fast_action_tokenizer.py  text_action_tokenizer.py  vq_action_tokenizer.py  vqvae_action_tokenizer.py
src/psi/trainers/: __init__.py  finetune.py  hfm.py  posttrain.py  pretrain.py  qwen3vl_mixin.py  trainer.py
src/psi/utils/: __init__.py  overwatch.py  utils.py
