[project]
name = "internvla-env"
version = "0.1.0"
description = "InternVLA environment exported from .venv-internvla"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "absl-py==2.3.1",
    "accelerate==1.12.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.10.5",
    "aiohttp-cors==0.8.1",
    "aiosignal==1.4.0",
    "albucore==0.0.17",
    "albumentations==1.4.18",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "anyio==4.11.0",
    "argcomplete==3.6.3",
    "array-record==0.8.1",
    "astunparse==1.6.3",
    "async-timeout==4.0.3",
    "attrs==25.4.0",
    "autocommand==2.2.2",
    "av==12.3.0",
    "backports.tarfile==1.2.0",
    "bitsandbytes==0.48.2",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "contourpy==1.3.2",
    "cramjam==2.11.0",
    "cycler==0.12.1",
    "datasets==4.4.1",
    # Note: pyarrow version conflict - datasets 4.4.1 requires >=21.0.0
    # but environment had 14.0.1 installed (likely as override)
    "decord==0.6.0",
    "deepspeed==0.16.9",
    "diffusers==0.30.2",
    "dill==0.4.0",
    "dm-tree==0.1.8",
    "docker-pycreds==0.4.0",
    "docstring-parser==0.17.0",
    "dotenv==0.9.9",
    "draccus==0.11.5",
    "einops==0.8.1",
    "einx==0.3.0",
    "etils==1.13.0",
    "eval-type-backport==0.3.0",
    "exceptiongroup==1.3.1",
    "expandvars==1.1.2",
    "fastapi==0.122.0",
    "fastparquet==2024.11.0",
    "filelock==3.20.0",
    "flash-attn==2.8.3",
    "flatbuffers==25.9.23",
    "fonttools==4.60.1",
    "frozendict==2.4.7",
    "frozenlist==1.8.0",
    "fsspec==2025.10.0",
    "fvcore==0.1.5.post20221221",
    "gast==0.6.0",
    "gitdb==4.0.12",
    "gitpython==3.1.45",
    "google-pasta==0.2.0",
    "googleapis-common-protos==1.72.0",
    "grpcio==1.76.0",
    "h11==0.16.0",
    "h5py==3.14.0",
    "hf-xet==1.2.0",
    "hjson==3.1.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.36.0",
    "idna==3.11",
    "imageio==2.34.2",
    "immutabledict==4.2.2",
    "importlib-metadata==8.7.0",
    "importlib-resources==6.5.2",
    "inflect==7.3.1",
    "iopath==0.1.10",
    "jaraco.collections==5.1.0",
    "jaraco.context==5.3.0",
    "jaraco.functools==4.0.1",
    "jaraco.text==3.12.1",
    "jinja2==3.1.6",
    "jsonlines==4.0.0",
    "keras==3.12.0",
    "killport==1.2.0",
    "kiwisolver==1.4.9",
    "lazy-loader==0.4",
    "libclang==18.1.1",
    "markdown==3.10",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "matplotlib==3.10.7",
    "mdurl==0.1.2",
    "mergedeep==1.3.4",
    "ml-dtypes==0.5.4",
    "more-itertools==10.3.0",
    "mpmath==1.3.0",
    "msgpack==1.1.2",
    "multidict==6.7.0",
    "multiprocess==0.70.18",
    "mypy-extensions==1.1.0",
    "namex==0.1.0",
    "narwhals==2.12.0",
    "networkx==3.4.2",
    "ninja==1.13.0",
    "numpy==1.26.4",
    "numpydantic==1.6.7",
    "nvidia-cublas-cu12==12.8.4.1",
    "nvidia-cuda-cupti-cu12==12.8.90",
    "nvidia-cuda-nvrtc-cu12==12.8.93",
    "nvidia-cuda-runtime-cu12==12.8.90",
    "nvidia-cudnn-cu12==9.10.2.21",
    "nvidia-cufft-cu12==11.3.3.83",
    "nvidia-cufile-cu12==1.13.1.3",
    "nvidia-curand-cu12==10.3.9.90",
    "nvidia-cusolver-cu12==11.7.3.90",
    "nvidia-cusparse-cu12==12.5.8.93",
    "nvidia-cusparselt-cu12==0.7.1",
    "nvidia-nccl-cu12==2.27.3",
    "nvidia-nvjitlink-cu12==12.8.93",
    "nvidia-nvtx-cu12==12.8.90",
    "omegaconf==2.3.0",
    "opencv-python==4.11.0.86",
    "opencv-python-headless==4.11.0.86",
    "openexr==3.4.4",
    "opt-einsum==3.4.0",
    "optree==0.18.0",
    "packaging==25.0",
    "pandas==2.3.3",
    "params-proto==2.13.2",
    "peft==0.18.0",
    "pillow==12.0.0",
    "pipablepytorch3d==0.7.6",
    "platformdirs==4.5.0",
    "plotly==6.2.0",
    "portalocker==3.2.0",
    "promise==2.3",
    "propcache==0.4.1",
    "protobuf==5.29.5",
    "psutil==7.1.3",
    "py-cpuinfo==9.0.0",
    "pyarrow>=14.0.1",  # Relaxed version to resolve conflict with datasets
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pydantic-yaml==1.6.0",
    "pygments==2.19.2",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "pyyaml-include==1.4.1",
    "qwen-vl-utils==0.0.14",
    "regex==2025.11.3",
    "requests==2.32.5",
    "rich==14.2.0",
    "ruamel.yaml==0.18.16",
    "ruamel-yaml-clib==0.2.15",
    "safetensors==0.7.0",
    "scikit-image==0.25.2",
    "scipy==1.15.3",
    "sentry-sdk==2.46.0",
    "setproctitle==1.3.7",
    "setuptools==80.9.0",
    "shellingham==1.5.4",
    "shtab==1.8.0",
    "simple-parsing==0.1.7",
    "simple-websocket-server==0.4.4",
    "simplejpeg==1.9.0",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "starlette==0.50.0",
    "sympy==1.14.0",
    "tabulate==0.9.0",
    "tensorboard==2.20.0",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.20.0",
    "tensorflow-addons==0.19.0",
    "tensorflow-datasets==4.9.9",
    "tensorflow-graphics==2021.12.3",
    "tensorflow-metadata==0.5.0",
    "termcolor==3.2.0",
    "tifffile==2025.5.10",
    "tiktoken==0.12.0",
    "timm==1.0.14",
    "tokenizers==0.21.4",
    "toml==0.10.2",
    "tomli==2.0.1",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "torchcodec==0.6.0",
    "torchvision==0.23.0",
    "tqdm==4.67.1",
    "transformers==4.52.3",
    "transformers-stream-generator==0.0.4",
    "trimesh==4.10.0",
    "triton==3.4.0",
    "typeguard==4.4.4",
    "typer==0.20.0",
    "typing-extensions==4.15.0",
    "typing-inspect==0.9.0",
    "tyro==0.9.35",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "uvicorn==0.38.0",
    "vuer==0.0.68",
    "wandb==0.18.0",
    "waterbear==2.6.8",
    "websocket-client==1.8.0",
    "websockets==15.0.1",
    "werkzeug==3.1.3",
    "wheel==0.45.1",
    "wrapt==2.0.1",
    "xxhash==3.6.0",
    "yacs==0.1.8",
    "yarl==1.22.0",
    "zipp==3.23.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
